[package]
name = "rtcdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function_name = "0.3.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tempdir = "0.3.7"
anyhow = "1.0"
lz4_flex = "0.11.1"
byteorder = "1.4.3"
